--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ nav .menu{
   text-transform:uppercase;
   font-weight:bold;
 }
+nav .logo{
+  width:30%;
+  text-align:center;
+}
 .main{
   width:100%;
   height:80vh:
@@ -34,11 +38,4 @@ section h3{
   font-size:40px;font-weight:210;
   letter-spacing:3px;
   text-shadow:1px 1px 2px black;
-}
-main form{
-  margin:30px 0 25px 0;
-  font-size:60px;
-  font-weight:650;
-  text-shadow:2px 1px 5px black;
-  text-transform:uppercase; 
 }
