--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,96 @@
+  
 *{
-  margin:0;
+  margin:0; 
   padding:0;
   box-sizing:border-box;
-  font-family:'Times new roman'
+  font-family: 'sans-serif';
 }
-.header{
-  width:100%;
-  height:95vh;
-  background-size:cover;
-  background-repeat:no-repeat;
+header
+{
+   width:100%;
+   height:100vh;
+   background-image: url('images.jpg');
+   background-repeat: no-repeat;
+   background-size:cover;
 }
-nav{
-  background-image:logo.jpeg;
-  background-color: #cccccc
+nav
+{
+   width:100%; height:15vh;
+   background  :  rgba(0,0,0,0.2 );
+   color:white;
+     display:flex;
+     justify-content:space-between;
+     align-items: center;
+      text-transform:uppercase;
 }
-nav .menu{
-  width:45%;
-  display:flex;
-  justify-content:space-around;
-  text-transform:uppercase;
-  font-weight:bold;
+nav .logo
+{
+   width:25% ;
+   text-align:center;
+  
+
 }
-nav .logo{
-  width:25%;
-  text-align:center;
+nav .menu
+{
+  width:40%;
+  
+  display:flex; 
+   justify-content: space-around ;
 }
-.main{
-  width:100%;
-  height:80vh:
+nav .menu a
+{
+     width:25%;
+     text-decoration:none;
+     color:white; 
+     font-weight:bold; 
+}
+main{
+  width:100%; 
+  height:85vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  text-align:center;
+  text-align: center;
   color:white;
 }
-section h3{
-  font-size:40px;font-weight:210;
-  letter-spacing:3px;
-  text-shadow:1px 1px 2px black;
+section h3
+{
+  font-size:35px; font-weight: 200 ;
+  letter-spacing: 3px;
+  text-shadow: 1px 1px 2px black ;
+}
+section h1
+{
+ margin:  30px 0 20px 0;
+ font-size:55px;
+ font-weight: 700;
+ text-shadow: 2px 1px 5px black;
+ text-transform: uppercase;
+}
+section p
+{
+   font-size: 25px;
+    word-spacing:2px;
+    margin-bottom:25px;
+    text-shadow:1px 1px 1px black;
+}
+section a
+{
+  padding:12px 30px;
+  border-radius:4px;
+  outline:none;
+  text-transform:uppercase;
+  font-size:13px;
+  font-weight:500;
+  text-decoration:none;
+  letter-spacing: 1px;
+}
+section .btntwo
+{
+  background:#00b894;
+  color: white  ;
+}
+nav.menu a:first-child
+{
+        color:#00b894;
 }
