--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@ header
 {
    width:100%;
    height:100vh;
-   background-image: url('images.jpg');
+   background-image: url('logo.jpeg');
    background-repeat: no-repeat;
    background-size:cover;
 }
 nav
 {
    width:100%; height:15vh;
-   background  :  rgba(0,0,0,0.2 );
+   background  :  rgba(0,0,0,0.3 );
    color:white;
      display:flex;
      justify-content:space-between;
