--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   margin:0; 
   padding:0;
   box-sizing:border-box;
-  font-family: 'sans-serif';
+  font-family: 'times-new-roman';
 }
 header
 {
@@ -27,13 +27,10 @@ nav .logo
 {
    width:25% ;
    text-align:center;
-  
-
 }
 nav .menu
 {
-  width:40%;
-  
+  width:40%; 
   display:flex; 
    justify-content: space-around ;
 }
