--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header
 {
    width:100%;
    height:100vh;
-   background-image: url('logo.jpeg');
+   background-color:black;
    background-repeat: no-repeat;
    background-size:cover;
 }
