--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ section a
   text-decoration:none;
   letter-spacing: 1px;
 }
-section .button
+section razorpay.button
 {
   background:#00b894;
   color: black;
