--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ header
    background-repeat: no-repeat;
    background-size:cover;
 }
+body{
+  background-image:url("logo.jpeg");
+  background-color:#cccccc;
+}
 nav
 {
    width:100%; height:15vh;
