--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ section p
    font-size: 25px;
     word-spacing:2px;
     margin-bottom:25px;
-    text-shadow:1px 1px 1px black;
+    text-shadow:1px 1px 1px white;
 }
 section a
 {
